ec2.tf
resource "aws_instance" "wordpress_test_instance" {
  ami             = "ami-053b0d53c279acc90"
  instance_type   = "t2.micro"
  key_name        = aws_key_pair.my_key.key_name
  security_groups = [aws_security_group.wordpress_sg.name]

  user_data = file("user-data.sh")

  tags = {
    Name = "WordPress Instance"
  }
}

resource "aws_key_pair" "my_key" {
  key_name   = "my_key_name"
  #public_key = file("~/.ssh/id_rsa.pub")
  public_key = file("${path.module}/keys/id_rsa.pub")
}

resource "aws_security_group" "wordpress_sg" {
  name        = "wordpress_sg"
  description = "Allow inbound traffic for WordPress"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["27.7.61.93/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
